--- a/info.html
+++ b/info.html
@@ -15,31 +15,49 @@
 
   </div>
   <div class="content container">
-    <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="./img/pexels-photo-62097.jpeg" alt="First slide">
+    <div class="row margin-top-20">
+      <div class="col-12 col-md-4 row hours-wrapper">
+        <div class="title col-12">
+          Thai House Restaurant
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="./img/pexels-photo-675951.jpeg" alt="Second slide">
+        <div class="info col-12">
+          9938 Holmes Rd, Kansas City, MO 64131
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="./img/pexels-photo-858508.jpeg" alt="Third slide">
+        <div class="info col-12">
+          Phone: (678) 705-9539
+        </div>
+        <div class="sub-title col-12">
+          Store Hours:
+        </div>
+        <div class="info col-4">
+          Mon - Fri:
+        </div>
+        <div class="info col-8">
+          11:00 AM - 03:00 PM
+        </div>
+        <div class="info col-4">
+        </div>
+        <div class="info col-8">
+          05:00 PM - 10:00 PM
+        </div>
+        <div class="info col-4">
+          Saturday:
+        </div>
+        <div class="info col-8">
+          01:30 PM - 10:00 PM
+        </div>
+        <div class="info col-4">
+          Sunday:
+        </div>
+        <div class="info col-8">
+          01:30 PM - 10:00 PM
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="col-12 col-md-8 location-wrapper">
+        <iframe width="700" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB0t6niMXGKXHXALmhguLQLQ0e24RQ0XDg
+              &q=place_id:ChIJB2z2J43owIcRx4pVJ_lcLU8" allowfullscreen>
+        </iframe>
+      </div>
     </div>
   </div>
   <div class="footer container" id="footer">
