Modified home page, and loading mechanism

--- a/info.html
+++ b/info.html
@@ -1,80 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="./style/style.css">
-  <title>Eat365</title>
-</head>
-
-<body onload="load()">
-  <div class="header container" id="header">
-
-  </div>
-  <div class="content container">
-    <div class="row margin-top-20">
-      <div class="col-12 col-md-4 row hours-wrapper">
-        <div class="title col-12">
-          Thai House Restaurant
-        </div>
-        <div class="info col-12">
-          9938 Holmes Rd, Kansas City, MO 64131
-        </div>
-        <div class="info col-12">
-          Phone: (678) 705-9539
-        </div>
-        <div class="sub-title col-12">
-          Store Hours:
-        </div>
-        <div class="info col-4">
-          Mon - Fri:
-        </div>
-        <div class="info col-8">
-          11:00 AM - 03:00 PM
-        </div>
-        <div class="info col-4">
-        </div>
-        <div class="info col-8">
-          05:00 PM - 10:00 PM
-        </div>
-        <div class="info col-4">
-          Saturday:
-        </div>
-        <div class="info col-8">
-          01:30 PM - 10:00 PM
-        </div>
-        <div class="info col-4">
-          Sunday:
-        </div>
-        <div class="info col-8">
-          01:30 PM - 10:00 PM
-        </div>
-      </div>
-      <div class="col-12 col-md-8 location-wrapper">
-        <iframe width="700" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB0t6niMXGKXHXALmhguLQLQ0e24RQ0XDg
-              &q=place_id:ChIJB2z2J43owIcRx4pVJ_lcLU8" allowfullscreen>
-        </iframe>
-      </div>
+<div class="row">
+  <div class="col-12 col-md-4 row hours-wrapper margin-top-20">
+    <div class="title col-12">
+      Thai House Restaurant
+    </div>
+    <div class="info col-12">
+      9938 Holmes Rd, Kansas City, MO 64131
+    </div>
+    <div class="info col-12">
+      Phone: (678) 705-9539
+    </div>
+    <div class="sub-title col-12">
+      Store Hours:
+    </div>
+    <div class="info col-4">
+      Mon - Fri:
+    </div>
+    <div class="info col-8">
+      11:00 AM - 03:00 PM
+    </div>
+    <div class="info col-4">
+    </div>
+    <div class="info col-8">
+      05:00 PM - 10:00 PM
+    </div>
+    <div class="info col-4">
+      Saturday:
+    </div>
+    <div class="info col-8">
+      01:30 PM - 10:00 PM
+    </div>
+    <div class="info col-4">
+      Sunday:
+    </div>
+    <div class="info col-8">
+      01:30 PM - 10:00 PM
     </div>
   </div>
-  <div class="footer container" id="footer">
-
+  <div class="col-12 col-md-8 margin-top-20">
+    <div class="map-responsive">
+      <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB0t6niMXGKXHXALmhguLQLQ0e24RQ0XDg
+        &q=place_id:ChIJB2z2J43owIcRx4pVJ_lcLU8" allowfullscreen>
+      </iframe>
+    </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <script>
-    function load(name) {
-      $("#header").load("./header.html");
-      $("#footer").load("./footer.html");
-    }
-  </script>
-</body>
-
-</html>
+</div>
