--- a/index.html
+++ b/index.html
@@ -4,46 +4,87 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
   <title>Eat365</title>
 </head>
 
-<body onload="load()">
-  <div class="header container" id="header">
-
-  </div>
-  <div class="content container">
-    <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="./img/pexels-photo-62097.jpeg" alt="First slide">
+<body onload="load('home')">
+  <div class="header" id="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-8 header-left-wrapper">
+          <h1 class="header-left">EAT365 Restaurant</h1>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="./img/pexels-photo-675951.jpeg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="./img/pexels-photo-858508.jpeg" alt="Third slide">
+        <div class="col-4 header-right-wrapper">
+          <div class="header-right">
+            <div class="addthis_inline_share_toolbox"></div>
+            <p>
+              345 WEST 34TH ST. NEW YORK, NY
+            </p>
+            <p>
+              (203) 555 - 7890
+            </p>
+          </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+    </div>
+    <div class="container-fluid primary-color">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark col-12 primary-color">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#" onclick="load('home')">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="load('menu')">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="load('info')">Hours & Location</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="load('specials')">Specials</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="load('about')">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.eat365.com">
+                  <i class="fas fa-utensils"></i>
+                  <span>Order Online</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
   </div>
+  <div class="content container" id="main">
+  </div>
   <div class="footer container" id="footer">
-
+    <div class="row">
+      <div class="col-12 footer-wrapper margin-top-20">
+        <div class="footer">
+          EAT365 | (678) 705-9539
+        </div>
+        <div class="footer">
+          1594 Woodcliff Drive Northeast, Atlanta, GA 30329
+        </div>
+        <div class="footer">
+          Copyright &copy; EAT365 2018 | All Rights Reserved
+        </div>
+      </div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -51,12 +92,14 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.12/js/all.js" integrity="sha384-Voup2lBiiyZYkRto2XWqbzxHXwzcm4A5RfdfG6466bu5LqjwwrjXCMBQBLMWh7qR"
+    crossorigin="anonymous"></script>
   <script>
     function load(name) {
-      $("#header").load("./header.html");
-      $("#footer").load("./footer.html");
+      $("#main").load("./" + name + ".html");
     }
   </script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5aebdbd3c3aed0ba"></script>
 </body>
 
 </html>
