--- a/menu.html
+++ b/menu.html
@@ -77,7 +77,10 @@
   <div class="col-12 col-md-2 margin-top-20">
     <a class="menu-eat" href="https://www.eat365.com">
       <div>EAT 365</div>
-      <div>Order Online</div>
+      <div>
+        <i class="fas fa-utensils"></i>
+        <span>Order Online</span>
+      </div>
     </a>
   </div>
 </div>
