Added about and specials page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           1594 Woodcliff Drive Northeast, Atlanta, GA 30329
         </div>
         <div class="footer">
-          Copyright &copy; EAT365 2018 | All Rights Reserved
+          Copyright &copy; <a href="https://www.eat365.com">EAT365</a> 2018 | All Rights Reserved
         </div>
       </div>
     </div>
